# Gaia

./: .gitignore  README.md  context.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_tests.sh
cli/: __init__.py  app_controller.py  terminal_ui.py
config/: settings.py
core/: __init__.py  app_controller.py  cnn_ai_model.py  csv_writer.py  extraction_session.py  extractor.py  i18n.py  observer.py  ocr_parser.py  regex_engine.py  shell_manager.py  terminal_ui.py
gaia/: __init__.py  __main__.py  csv_writer.py  extraction_session.py  extractor.py  gaia.py  main.py  ocr_parser.py  options.py  output_stream.py  parser.py  pdf_parser.py  regex_engine.py
gaia/cli/: app_controller.py  cli_helper.py  terminal_ui.py
gaia/config/: __init__.py  options.py
gaia/locale/en/: messages.po
gaia/locale/en/LC_MESSAGES/: messages.mo
gaia/locale/pt/: messages.po
gaia/locale/pt/LC_MESSAGES/: messages.mo
locale/en/LC_MESSAGES/: messages.mo
pydocstruct/: __init__.py  __main__.py  extraction_session.py  i18n.py  main.py  observer.py  options.py  output_stream.py  parser.py  pdf_parser.py  pydocstruct.py  regex_engine.py
pydocstruct/cli/: __init__.py  cli_helper.py  terminal_ui.py
pydocstruct/locale/en/: messages.po
pydocstruct/locale/en/LC_MESSAGES/: messages.mo
pydocstruct/locale/pt/: messages.po
pydocstruct/locale/pt/LC_MESSAGES/: messages.mo
pydocstructurer/: __init__.py  __main__.py  extraction_session.py  i18n.py  main.py  options.py  output_stream.py  parser.py  parsers.py  pdf_parser.py  pydocstructurer.py  regex_engine.py
pydocstructurer/cli/: __init__.py  cli_helper.py  terminal_ui.py
pydocstructurer/locale/en/: messages.po
pydocstructurer/locale/en/LC_MESSAGES/: messages.mo
pydocstructurer/locale/pt/: messages.po
pydocstructurer/locale/pt/LC_MESSAGES/: messages.mo
pyingestion/: __init__.py  __main__.py  extraction_session.py  i18n.py  input_stream.py  main.py  observer.py  options.py  output_stream.py  parser.py  parsers.py  pyingestion.py  regex_engine.py  stream.py  transform_stream.py
pyingestion/cli/: __init__.py  cli_arguments.toml  cli_helper.py  terminal_ui.py
pyingestion/locale/en/: messages.po
pyingestion/locale/en/LC_MESSAGES/: messages.mo
pyingestion/locale/pt/: messages.po
pyingestion/locale/pt/LC_MESSAGES/: messages.mo
tests/: __init__.py  conftest.py  test_cli.py  test_cli_to_mapping.py  test_config_pipeline_builder.py  test_extractors.py  test_i18n.py  test_observer.py  test_options.py  test_parser.py  test_parsers.py  test_pdf_parser.py  test_regex_engine.py  test_resume.py  test_settings.py  test_sqlite_integration.py  test_sqlite_output_stream.py  test_transform_stream.py
tools/linux/: compile_locales.sh  run_tests.sh
