[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydocstructurer"
version = "1.0.3"
description = "General-purpose document to CSV data extraction library."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pypdf>=6.13.0",
    "rich>=13.7.1",
]

[project.scripts]
pydocstructurer = "pydocstructurer.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pydocstructurer*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.package-data]
pydocstructurer = ["locale/**/*.po", "locale/**/*.mo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
