[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyingestion"
version = "0.5.0b1"
description = "General-purpose document to CSV data extraction library."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pypdf>=6.13.0",
    "rich>=13.7.1",
    "python-docx>=1.1.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
]

[project.scripts]
pyingestion = "pyingestion.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyingestion*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.package-data]
pyingestion = ["locale/**/*.po", "locale/**/*.mo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
